@@ -1,0 +1,9 @@
+namespace DevDefined.OAuth.Provider.Inspectors
+{
+  public enum ProviderPhase
+  {
+    GrantRequestToken,
+    ExchangeRequestTokenForAccessToken,
+    AccessProtectedResourceRequest
+  }
+}
